Prueba de estabilidad 5

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,15 @@
         </activity>
 
         <activity android:name=".RegisterActivity" />
+
         <activity android:name=".MainActivity" />
+
         <activity android:name=".ChatActivity" />
+
+        <activity
+            android:name=".ProfileActivity"
+            android:label="Mi Perfil"
+            android:parentActivityName=".MainActivity" />
 
     </application>
 
