Documentación final y agregación del archivo README

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,25 +20,16 @@
         android:theme="@style/Theme.ConectaMobile"
         tools:targetApi="31">
 
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true">
+        <activity android:name=".LoginActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".RegisterActivity" />
-
         <activity android:name=".MainActivity" />
-
         <activity android:name=".ChatActivity" />
-
-        <activity
-            android:name=".ProfileActivity"
-            android:label="Mi Perfil"
-            android:parentActivityName=".MainActivity" />
+        <activity android:name=".ProfileActivity" android:label="Mi Perfil" android:parentActivityName=".MainActivity" />
 
     </application>
 
